@@ -1,5 +1,8 @@
 2011-05-19  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/49043
+	* testsuite/libgomp.c++/pr49043.C: New test.
+
 	PR c++/48869
 	* testsuite/libgomp.c++/pr48869.C: New test.
 
